# price-tracker

./: .gitignore  README.md  app.py  pyproject.toml
config/: __init__.py
config/database/: __init__.py  mysqldb.py
model/: __init__.py
scripts/: send_mail.py  update_product_data.py
