[tool.poetry]
name = "pricechecker"
version = "0.1.0"
description = "It fetches price of products from flipkart."
authors = ["Rajiv Patel <rajivpatel1729@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
beautifulsoup4 = "^4.9.3"
SQLAlchemy = "^1.3.23"
Flask-SQLAlchemy = "^2.4.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
